--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 <body>
     <div class="reveal">
     <div class="slides">
+        <section data-background-image="https://images.pexels.com/photos/45708/pexels-photo-45708.jpeg">
+            <h1>10 bonnes raisons d'acheter un canapé</h1>
+            <h2>Par l'équipe des représentant⋅es des doctorant⋅es</h2>
+        </section>
+
         <section data-background-image="https://images.pexels.com/photos/3184398/pexels-photo-3184398.jpeg">
             <h1>Améliorer le bien-être des employés</h1>
             <h2>Un espace confortable pour se détendre contribue à réduire le stress, ce qui peut augmenter la satisfaction et le bien-être au travail.</h2>
